--- a/index.html
+++ b/index.html
@@ -8,56 +8,56 @@
 		<link rel="stylesheet" href="src/css/webradio.css" />
 	</head>
 	<body>
-	<div class="icon-bar icon-bar-bottom four-up">
-		<a id="play-icon" class="item" onclick="loadPage('play', $(this));">
-			<i class="fa fa-play"></i>
-		</a>
-		<a class="item" onclick="loadPage('list', $(this)); setTimeout('setBlockGridItemSize(\'list-img\')', 1000);">
-			<i class="fa fa-heart"></i>
-		</a>
-		<a class="item" onclick="loadPage('search', $(this));">
-			<i class="fa fa-search"></i>
-		</a>
-		<a class="item" onclick="loadPage('tv', $(this));">
-			<i class="fa fa-television"></i>
-		</a>
-	</div>
+		<div class="icon-bar icon-bar-bottom four-up">
+			<a id="play-icon" class="item" onclick="loadPage('play', this);">
+				<i class="fa fa-play"></i>
+			</a>
+			<a class="item" onclick="loadPage('list', this);">
+				<i class="fa fa-heart"></i>
+			</a>
+			<a class="item" onclick="loadPage('search', this);">
+				<i class="fa fa-search"></i>
+			</a>
+			<a class="item" onclick="loadPage('tv', this);">
+				<i class="fa fa-television"></i>
+			</a>
+		</div>
 
-	<div id="content">
+		<div id="content">
 
-		<div id="play" class="hidden">
-			<div class="play-content">
-				<img class="play-img" />
-				<br />
-				<div class="play-buttons">
-					<a onclick="Player.stop();"><i class="fa fa-stop fa-fw"></i></a>
-					<a onclick="Player.volumeDown();"><i class="fa fa-minus fa-fw"></i></a>
-					<a onclick="Player.volumeUp();"><i class="fa fa-plus fa-fw"></i></a>
-					<a onclick="Player.toggleFavour();"><i class="fa fa-heart-o fa-fw"></i></a>
+			<div id="play" class="hidden">
+				<div class="play-content">
+					<img class="play-img" />
+					<br />
+					<div class="play-buttons">
+						<a onclick="Player.stop();"><i class="fa fa-stop fa-fw"></i></a>
+						<a onclick="Player.volumeDown();"><i class="fa fa-minus fa-fw"></i></a>
+						<a onclick="Player.volumeUp();"><i class="fa fa-plus fa-fw"></i></a>
+						<a onclick="Player.toggleFavour();"><i class="fa fa-heart-o fa-fw"></i></a>
+					</div>
 				</div>
 			</div>
-		</div>
 
-		<div id="list" class="hidden">
-			<ul id="list-grid" class="small-block-grid-2 medium-block-grid-3 large-block-grid-4 responsive"></ul>
-		</div>
-
-		<div id="search" class="hidden">
-			<div class="input responsive">
-				<input type="text" placeholder="Suchwort hier eingeben" onchange="searchFor(this.value);" />
+			<div id="list" class="hidden">
+				<ul id="list-grid" class="small-block-grid-2 medium-block-grid-3 large-block-grid-4 responsive"></ul>
 			</div>
-			<ul id="search-grid" class="small-block-grid-2 medium-block-grid-3 large-block-grid-4 responsive"></ul>
-		</div>
 
-		<div id="tv" class="hidden">
-			<div class="input responsive">
-				soon...
+			<div id="search" class="hidden">
+				<div class="input responsive">
+					<input type="text" placeholder="Suchwort hier eingeben" onchange="searchFor(this.value);" />
+				</div>
+				<ul id="search-grid" class="small-block-grid-2 medium-block-grid-3 large-block-grid-4 responsive"></ul>
 			</div>
+
+			<div id="tv" class="hidden">
+				<div class="input responsive">
+					soon...
+				</div>
+			</div>
+
 		</div>
 
-	</div>
-
-	<script src="src/js/jquery.js"></script>
-	<script src="src/js/webradio.js"></script>
-  </body>
+		<script src="src/js/webradio.js"></script>
+		<script src="src/js/ui.js"></script>
+	</body>
 </html>
