correctly show radio images when playing

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
 			<div id="play" class="hidden">
 				<div class="play-content">
-					<img id="play-img" class="play-img" />
+					<img id="play-img" class="play-img" src="black.png" />
 					<br />
 					<div class="play-buttons">
-						<a onclick="player.stop();"><i class="fa fa-stop fa-fw"></i></a>
+						<a onclick="stop();"><i class="fa fa-stop fa-fw"></i></a>
 						<a onclick="player.changeVolume(+5);"><i class="fa fa-minus fa-fw"></i></a>
 						<a onclick="player.changeVolume(-5);"><i class="fa fa-plus fa-fw"></i></a>
 						<a onclick="toggleFavourite();"><i id="favourite-indicator" class="fa fa-heart-o fa-fw"></i></a>
