bug fixes and usability improvements

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 					<br />
 					<div class="play-buttons">
 						<a onclick="stop();"><i class="fa fa-stop fa-fw"></i></a>
-						<a onclick="player.changeVolume(+5);"><i class="fa fa-minus fa-fw"></i></a>
-						<a onclick="player.changeVolume(-5);"><i class="fa fa-plus fa-fw"></i></a>
+						<a onclick="player.changeVolume(-5);"><i class="fa fa-minus fa-fw"></i></a>
+						<a onclick="player.changeVolume(+5);"><i class="fa fa-plus fa-fw"></i></a>
 						<a onclick="toggleFavourite();"><i id="favourite-indicator" class="fa fa-heart-o fa-fw"></i></a>
 					</div>
 				</div>
